--- a/src/components/Nav/index.css
+++ b/src/components/Nav/index.css
@@ -1,4 +1,33 @@
-.nav{
-    background-color: blue;
+.navbar {
+    background-color: #911705;
     color: white;
+    height: 4.5em;
+    display: flex;
+    justify-content: space-between;
 }
+
+#score, #topScore {
+    margin-left: 15px;
+    font-size: 30px;
+}
+
+#title {
+    font-size: 40px;
+}
+
+.jumbotron{
+    height: 300px;;
+    background-image: url("../Images/jumbotron_image.png");
+    background-size: cover;
+    color: white;
+    /* background-repeat: no-repeat; */
+}
+
+#instructions {
+    color: white;
+    margin-bottom: 30px;
+}
+/* .display-4 {
+    margin-bottom: 154px;
+    margin-top: -34px;
+} */
