--- a/src/components/Nav/index.css
+++ b/src/components/Nav/index.css
@@ -11,6 +11,10 @@
     font-size: 30px;
 }
 
+#guess {
+    font-size: 30px;
+}
+
 #title {
     font-size: 40px;
 }
@@ -18,7 +22,9 @@
 .jumbotron{
     height: 300px;;
     background-image: url("../Images/jumbotron_image.png");
-    background-size: cover;
+    /* background-image: url("/images/jumbotron_image.png"); */
+    /* background-size: cover; */
+    background-size: 100% 100%;
     color: white;
     /* background-repeat: no-repeat; */
 }
@@ -27,6 +33,14 @@
     color: white;
     margin-bottom: 30px;
 }
+
+@media only screen and (max-width: 822px) {
+    .navbar {
+        display: flex;
+        flex-direction: column;    
+        height: 11em;
+    }
+  }
 /* .display-4 {
     margin-bottom: 154px;
     margin-top: -34px;
